             large/small requests

Severity   : normal
Bugzilla   : 16680
Description: Detect corruption of block bitmap and checking for preallocations
Details    : Checks validity of on-disk block bitmap. Also it does better
             checking of number of applied preallocations. When corruption is
             found, it turns filesystem readonly to prevent further corruptions.

--------------------------------------------------------------------------

2008-08-31 Sun Microsystems, Inc.
	* version 1.6.6
	* Support for kernels:
	 2.6.5-7.312 (SLES 9),
	 2.6.9-67.0.22.EL (RHEL 4),
	 2.6.16.60-0.23 (SLES 10),
	 2.6.18-92.1.6.el5 (RHEL 5),
	 2.6.22.14 vanilla (kernel.org)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.22 vanilla (kernel.org)
	* Client support for unpatched kernels:
	  we do not recommend using patchless RHEL4 clients with kernels
	  prior to 2.6.9-55EL (RHEL4U5).
	* Recommended e2fsprogs version: 1.40.11-sun1
	* Note that reiserfs quotas are disabled on SLES 10 in this kernel.
	* RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
	  removed cwd "./" (refer to Bugzilla 14399).
	* A new quota file format has been introduced in 1.6.5.
	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 don't understand this new
	  format. The automatic format conversion can be avoided by running
	  the following command on the MDS:
		'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.
	* A new quota file format was introduced in 1.6.6.
	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.6.6/1.8.0 don't understand this new
	  format. The automatic format conversion can be avoided by running
	  the following commands on the MDS and OSS servers (for
	  pre 1.4.12-1.6.5 quota files):